# oasis-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  list_models.py  models_list.txt  pyproject.toml  railway.json  requirements.txt  run_backend.py  test_groq.py  test_results.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  feedback.py  health.py  router.py
backend/app/config/: logging.py  settings.py
backend/app/core/: security.py
backend/app/data/: recommendations.json
backend/app/models/: ai_request.py  base.py  feedback.py  user.py
backend/app/repositories/: ai_logs_repo.py  feedback_repo.py
backend/app/schemas/: ai.py  auth.py  common.py  feedback.py
backend/app/services/: ai_service.py
backend/tests/: test_ai.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: chatService.js  client.js
frontend/src/components/features/chat/: AutoSelectionFlow.jsx  CategoryFilters.jsx  ChatInput.jsx  ChatMessage.jsx  RecommendationCard.jsx
frontend/src/components/features/hero/: HeroSection.jsx
frontend/src/components/features/recommendations/: AlternativeOptions.jsx  CostCalculator.jsx  ResultsSection.jsx  (+1 more)
frontend/src/components/ui/: switch.jsx
frontend/src/lib/: utils.js
frontend/src/pages/: Home.jsx  Layout.jsx  Settings.jsx  UsageStats.jsx  index.jsx
frontend/src/utils/: index.ts
shared/: README.md
(+2 files in other folders)
